[package]
name = "chess_compression"
description = "A chess compression library"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/arnsholt/chess_compression"

[dependencies]
bitbit = "0.2"
itertools = "0.10"
lazy_static = "1.4"
shakmaty = "0.27"

[dev-dependencies]
base64 = "0.22"
pgn-reader = "0.26"
